; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/events/extr_ring_buffer.c_perf_output_space.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/events/extr_ring_buffer.c_perf_output_space.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ring_buffer = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ring_buffer*, i64, i64, i64)* @perf_output_space to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @perf_output_space(%struct.ring_buffer* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.ring_buffer*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store %struct.ring_buffer* %0, %struct.ring_buffer** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  %11 = load %struct.ring_buffer*, %struct.ring_buffer** %6, align 8
  %12 = getelementptr inbounds %struct.ring_buffer, %struct.ring_buffer* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %38

16:                                               ; preds = %4
  %17 = load %struct.ring_buffer*, %struct.ring_buffer** %6, align 8
  %18 = call i32 @perf_data_size(%struct.ring_buffer* %17)
  %19 = sub nsw i32 %18, 1
  %20 = sext i32 %19 to i64
  store i64 %20, i64* %10, align 8
  %21 = load i64, i64* %8, align 8
  %22 = load i64, i64* %7, align 8
  %23 = sub i64 %21, %22
  %24 = load i64, i64* %10, align 8
  %25 = and i64 %23, %24
  store i64 %25, i64* %8, align 8
  %26 = load i64, i64* %9, align 8
  %27 = load i64, i64* %7, align 8
  %28 = sub i64 %26, %27
  %29 = load i64, i64* %10, align 8
  %30 = and i64 %28, %29
  store i64 %30, i64* %9, align 8
  %31 = load i64, i64* %9, align 8
  %32 = load i64, i64* %8, align 8
  %33 = sub i64 %31, %32
  %34 = trunc i64 %33 to i32
  %35 = icmp slt i32 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %16
  store i32 0, i32* %5, align 4
  br label %38

37:                                               ; preds = %16
  store i32 1, i32* %5, align 4
  br label %38

38:                                               ; preds = %37, %36, %15
  %39 = load i32, i32* %5, align 4
  ret i32 %39
}

declare dso_local i32 @perf_data_size(%struct.ring_buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
